# web2.0_homework_9

./: authors.json  main.py  pyproject.toml
